<resources>
    <string name="app_name">ALC_Phase_1_Challenge</string>
    <string name="john_d">\@JohnDoe</string>
    <string name="about_alc">About ALC</string>
    <string name="alc_4_phase_1">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="my_profile">My Profile</string>
    <string name="name">John Doe</string>
    <string name="track_linear">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="kenya">Kenya</string>
    <string name="email">Email:</string>
    <string name="personal_email">johndoe@mail.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="actual_phone_number">+2547xxxxxxxx</string>
    <string name="slack">Slack Username:</string>
    <string name="profile_image">Profile image</string>
</resources>
