<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/my_profile"
            android:textSize="20sp"
            android:fontFamily="@font/acme_regular"
            style="?attr/actionBarTabTextStyle"
            android:textColor="@color/colorWhite"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgPortrait"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/imgPortrait"
        android:fontFamily="@font/acme_regular"
        android:textSize="30sp"
        android:gravity="center_horizontal" />
    <View
        android:id="@+id/underLine"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/txtName"
        android:background="@color/colorPrimaryText"/>
    
    <LinearLayout
        android:id="@+id/lytTrack"
        android:layout_below="@id/underLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/track_linear"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"
            android:paddingStart="6dp"
            android:paddingEnd="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/android"
            android:gravity="start"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytCountry"
        android:layout_below="@id/lytTrack"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/country"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/kenya"
            android:gravity="start"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytEmail"
        android:layout_below="@id/lytCountry"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/personal_email"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytNumber"
        android:layout_below="@id/lytEmail"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_number"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/actual_phone_number"
            android:gravity="start"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytSlack"
        android:layout_below="@id/lytNumber"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/slack"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/john_d"
            android:gravity="start"
            android:textSize="25sp"
            android:fontFamily="@font/acme_regular"/>
    </LinearLayout>

</RelativeLayout>
</layout>